# baking-shop

./: .env  Cargo.toml
migrations/2022-03-18-112335_users/: up.sql
migrations/2022-03-18-180414_product/: down.sql  up.sql
src/: identity.rs  jwt.rs  main.rs
src/api/: mod.rs  mutation.rs  query.rs
src/guards/: admin_guard.rs  auth_guard.rs  mod.rs
src/models/: mod.rs  product.rs  user.rs
src/models/products/: mod.rs  name_loader.rs  pic_loader.rs  price_loader.rs  type_loader.rs  weight_loader.rs
