[package]
name = "baking-shop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-identity = "0.4.0"
async-graphql = "3.0.35"
async-graphql-actix-web = "3.0.35"
jsonwebtoken = "8.0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.19"
sqlx = { version = "0.5.10", features = [ "runtime-tokio-native-tls" , "postgres", "macros" ] }
dotenv = "0.15.0"